--- a/src/components/Navigation/SideDrawer/SideDrawer.module.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.module.css
@@ -27,6 +27,9 @@
 }
 
 .Logo {
+	position: relative;
+	left: -8px;
+	display: inline-block;
 	/* height: 11%; */
 	height: 50px;
 	margin-bottom: 32px;
